Merge remote changes with local stashed changes